--- a/index.html
+++ b/index.html
@@ -29,36 +29,21 @@
 			<a href="javascript:void(0);" class="icon" onclick="myFunction()">
 				<i class="fa fa-bars"></i>
 			</a>
-		</div>
+  </div>
 	</header>
-	<footer></footer>
-	<div align="center">
+
+    <br>
+    
+        <iframe src="https://free.timeanddate.com/clock/i9qgdirm/n1391/szw210/szh210/hoc000/hbw4/cf100/hgr0/hcw2/fav0/fiv0/mqc000/mqs3/mql25/mqw2/mqd96/mhc000/mhs3/mhl20/mhw2/mhd96/mmc000/mms3/mml5/mmw2/mmd96/hhs2/hhw8/hms2/hmw8/hmr4/hsc000/hss3/hsl90" frameborder="0" width="210" height="210" style="padding: 60px; margin-left: auto;"></iframe>
+
+    <aside style="margin-right:60px; max-width:60%; width:auto;">
+    <h1 align="center">Hello fellow google bots!</h1>
+    <p style="font-size: 20px;">It seems that you have stumbled upon my website. I'm so happy to see a guest here. It's not everyday you see a web surfer. Well enjoy this site or farewell if you're leaving!</p>
+    </aside>
 	
-	<img src="img/banner.png" style="width:100%;height:220px;">
-	</div>
+	<br><br><br><br>
 	
-	<br>
 	
-	<main style="min-height:100px;">
-		
-		<p align="center">
-		<a href="https://www.reddit.com/user/MansyS_/">
-					<img src="img/button.gif"/>
-		</a>
-		<br>
-		If you're bored or something you could go and check out my reddit! Possibly, maybe, idk...
-		<br> <br>
-		Im currently working on the website as much as possible so it would be really nice of you to give me some extra feedback by clicking<a href="http://users4.smartgb.com/g/g.php?a=s&i=g44-82511-9f">here.</a>
-		</p>
-		<br>
-	</main>
-	
-	<br>
-	
-	<main style="width: 600px; padding: 20px;">
-	<h1 class="red" align="center" style="padding:0px;">UNDER CONSTRUCTION...
-	<img src="img/under.jpg" style="border-width: 0px;">
-	</main>
 	
 	<footer>
 		<div class="left-footer">
