Updated some stuff

--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
 		</div>
 	</header>
 	<footer></footer>
-	<main style="width: 800px">
+	<main style="width: 800px; border-color: #10c22d;">
 	<!-- <div> Old stuff
 		<h1 align="center" class="glow">Animations & Other</h1>
 		<p align="center"><video height="400" controls>
