--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 	</h2>
 	
 	<div class="container">
-        - 23/01/2025 <br>
-		Added changelog window <br>
-		Added clock <br> 
-		Added welcome message <br>
-		Changed borders on divs <br>
-		Changed colour of Copyright text <br>
+        23/01/2025 <br>
+		- Added changelog window <br>
+		- Added clock <br> 
+		- Added welcome message <br>
+		- Changed borders on divs <br>
+		- Changed colour of Copyright text <br>
     </div>
 	
 	</main>
