The mobile Update

--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
 		</div>
 	</header>
 	<footer></footer>
-	<main style="width: 800px; border-color: #10c22d;">
+	<main style="width: 95%; border-color: #10c22d;">
 	<!-- <div> Old stuff
 		<h1 align="center" class="glow">Animations & Other</h1>
 		<p align="center"><video height="400" controls>
@@ -137,6 +137,7 @@
 			style="width: 25%; 
 			float: left;
 			margin-right: 10px;
+			margin-top: -10px;
 			"/></a>
 			
 			<p class="light_purple" style="padding:0px; float:right;">NEW!!!</p>
@@ -158,6 +159,7 @@
 			style="width: 25%; 
 			float: left;
 			margin-right: 10px;
+			margin-top: -10px;
 			"/></a>
 			
 			<p class="dark_red" style="padding:0px;">Knockoff NES -> Raspberry Pi case </p> 
