--- a/projects/amd.html
+++ b/projects/amd.html
@@ -13,12 +13,19 @@
 	<title>Projects | Mansymations</title>
 	<link rel="shortcut icon" type="image/png" href="../images/icon.png">
 </head>
+
+<style>
+main {
+	width: 90%;
+}
+</style>
+
 <br>
 <div class=bg style="background-color: black;">
 <body style="background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/1/13/AMD_Radeon_logo.svg/1200px-AMD_Radeon_logo.svg.png); background-size: 200px; background-position: 200px;">
 <footer></footer>
 
-<main style="background-color: ; width: 900px; border-color: red;">
+<main style="background-color: ;  border-color: red;">
 <h2 align="center">AMD PC building process</h1>
 <p align="center"><a href="../projects.html" style="padding: 0px;">[Go Back]</a> Published: Jan. 12th 2025 <p class="red" align="center" style="padding: 0px;">(ONGOING)</p></p>
 <p>In this blog I am showing and talking about the process behind building my new pc.</p>
@@ -28,7 +35,7 @@
 
 <br>
 
-<main style="width: 860px; padding: 20px; border-color: red;">
+<main style=" padding: 20px; border-color: red;">
 
 <h1 class="red" align="center" style="padding:0px;">UNDER CONSTRUCTION...
 <img src="../img/under.jpg" loading="lazy" style="border-width: 0px;">
