--- a/projects/nes.html
+++ b/projects/nes.html
@@ -13,12 +13,19 @@
 	<title>Projects | Mansymations</title>
 	<link rel="shortcut icon" type="image/png" href="../images/icon.png">
 </head>
+
+<style>
+main {
+	width: 90%;
+}
+</style>
+
 <br>
 <div class=bg>
 <body>
 <footer></footer>
 
-<main style="width: 900px">
+<main>
 <h2 align="center">Chinese NES case tranformation</h1>
 <p align="center"><a href="../projects.html" style="padding: 0px;">[Go Back]</a> Published: Sep. 4th 2024 <p class="red" align="center" style="padding: 0px;">(ONGOING)</p></p>
 <p>This is my first "blog". I just wanted to basically document me transforming this knockoff chinese NES classic into a case for my Raspberry Pi 4</p>
@@ -28,7 +35,7 @@
 
 <br>
 
-<main style="width: 860px; padding: 20px;">
+<main style=" padding: 20px;">
 
 <img src="../img/project01/01.png" loading="lazy" style="width: 33%; 
 			float: left;
@@ -47,7 +54,7 @@
 
 <br>
 
-<main style="width: 860px; padding: 20px;">
+<main style=" padding: 20px;">
 
 <img src="../img/project01/03.png" loading="lazy" style="width: 40%; 
 			float: left;
@@ -63,7 +70,7 @@
 
 <br>
 
-<main style="width: 860px; padding: 20px;">
+<main style=" padding: 20px;">
 
 <img src="../img/project01/04.png" loading="lazy" style="width: 30%; 
 			float: left;
@@ -83,7 +90,7 @@
 
 <br>
 
-<main style="width: 860px; padding: 20px;">
+<main style=" padding: 20px;">
 
 
 <div style="height:400px">
@@ -111,7 +118,7 @@
 
 <br>
 
-<main style="width: 860px; padding: 20px;">
+<main style=" padding: 20px;">
 
 
 <div style="height:400px">
@@ -139,7 +146,7 @@
 
 <br>
 
-<main style="width: 860px; padding: 20px;">
+<main style=" padding: 20px;">
 
 
 <div style="height:400px">
@@ -165,7 +172,7 @@
 
 <br>
 
-<main style="width: 860px; padding: 20px;">
+<main style=" padding: 20px;">
 
 
 <div style="height:400px">
@@ -191,7 +198,7 @@
 
 <br>
 
-<main style="width: 860px; padding: 20px;">
+<main style=" padding: 20px;">
 
 
 <div style="height:400px">
@@ -218,7 +225,7 @@
 
 <br>
 
-<main style="width: 860px; padding: 20px;">
+<main style=" padding: 20px;">
 
 <h1 class="red" align="center" style="padding:0px;">UNDER CONSTRUCTION...
 <img src="../img/under.jpg" loading="lazy" style="border-width: 0px;">
