--- a/index.html
+++ b/index.html
@@ -34,36 +34,44 @@
 
     <br>
     
-        <iframe src="https://free.timeanddate.com/clock/i9qgdirm/n1391/szw210/szh210/hoc000/hbw4/cf100/hgr0/hcw2/fav0/fiv0/mqc000/mqs3/mql25/mqw2/mqd96/mhc000/mhs3/mhl20/mhw2/mhd96/mmc000/mms3/mml5/mmw2/mmd96/hhs2/hhw8/hms2/hmw8/hmr4/hsc000/hss3/hsl90" frameborder="0" width="210" height="210" style="padding: 60px; margin-left: auto;"></iframe>
-
-    <aside style="margin-right:49px; max-width:60%; width:auto;">
-    <h1 align="center">Hello fellow humans!</h1>
-    <p style="font-size: 20px;">It seems that you have stumbled upon my website. I'm so happy to see a guest here. It's not everyday you see a web surfer. Well enjoy this site or farewell if you're leaving!</p>
+	<div class="clock" style="padding: 60px;">
+	<iframe src="https://free.timeanddate.com/clock/i9qgdirm/n1391/szw210/szh210/hoc000/hbw4/cf100/hgr0/hcw2/fav0/fiv0/mqc000/mqs3/mql25/mqw2/mqd96/mhc000/mhs3/mhl20/mhw2/mhd96/mmc000/mms3/mml5/mmw2/mmd96/hhs2/hhw8/hms2/hmw8/hmr4/hsc000/hss3/hsl90" frameborder="0" width="210" height="210"></iframe>
+	</div>
 	
-	<p style="font-size: 20px; color: red;">
-	WARNING!!! IF YOU'RE ON A MOBILE DEVICE THEN THE WEBSITE WILL BE COMPLETLY UNUSABLE
-	</p>
+    <main class="greeting" style="width:auto; ">
+    <h1 align="center">Hello fellow human!</h1>
+    <p style="font-size: 20px;">It seems that you have stumbled upon my website. I'm so happy to see a guest here. It's not everyday you see a web surferer. Well, enjoy this site or farewell if you're leaving!</p>
 	
-	</aside>
+	</main>
 	
-	<br><br><br><br><br>
+	<br><br><br>
 	
-	<main style="background-color: #b512b8; padding: 5px;">
+	<div>
+	<main style="background-color: #b512b8; padding: 5px; width: 80%;">
 	
 	<h2 align="center" style="color: white; padding: 0px;">
 	Changelog
 	</h2>
 	
 	<div class="container">
+		15/02/2025 <br>
+		- Changed some CSS stuff so the website will be good looking even for mobile users <br>
+		- Removed the text that said that the website would'nt be usable for mobile users <br>
+		- Changed the size of most divs <br>
+		- Centered the clock in mobile mode <br>
+		
+		<br>
         23/01/2025 <br>
 		- Added changelog window <br>
 		- Added clock <br> 
 		- Added welcome message <br>
 		- Changed borders on divs <br>
 		- Changed colour of Copyright text <br>
+		<br>
     </div>
 	
 	</main>
+	</div>
 	
 	<footer>
 		<div class="left-footer">
