--- a/index.html
+++ b/index.html
@@ -5,94 +5,29 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="description" content="A website for my career!">
-	<link rel="stylesheet" type="text/css" href="stylem.css" />
+	<link rel="stylesheet" type="text/css" href="style.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 	<title>Home | Mansymations</title>
-	<link rel="shortcut icon" type="image/png" href="images/icon.png">
+	<link rel="shortcut icon" type="site/image/png" href="site/images/icon.png">
 </head>
-<div class=bg>
-<body>
-	<header>
-		<div class="topnav">
-  <a href="index.html" class="active">Home</a>
-  <!-- Navigation links (hidden by default) -->
-  <div id="myLinks">
-	<a href="games.html">Games</a>
-	<a href="projects.html">Projects</a>
-	<a href="contact.html">Contact</a>
-    <a href="about.html">About</a>
-  </div>
-  <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
-			<a href="javascript:void(0);" class="icon" onclick="myFunction()">
-				<i class="fa fa-bars"></i>
-			</a>
-  </div>
-	</header>
 
-    <br>
-    
-	<div class="clock" style="padding: 60px;">
-	<iframe src="https://free.timeanddate.com/clock/i9qgdirm/n1391/szw210/szh210/hoc000/hbw4/cf100/hgr0/hcw2/fav0/fiv0/mqc000/mqs3/mql25/mqw2/mqd96/mhc000/mhs3/mhl20/mhw2/mhd96/mmc000/mms3/mml5/mmw2/mmd96/hhs2/hhw8/hms2/hmw8/hmr4/hsc000/hss3/hsl90" frameborder="0" width="210" height="210"></iframe>
-	</div>
-	
-    <main class="greeting" style="width:auto; ">
-    <h1 align="center">Hello fellow human!</h1>
-    <p style="font-size: 20px;">It seems that you have stumbled upon my website. I'm so happy to see a guest here. It's not everyday you see a web surferer. Well, enjoy this site or farewell if you're leaving!</p>
-	
-	</main>
-	
-	<br><br><br>
-	
-	<div>
-	<main style="background-color: #b512b8; padding: 5px; width: 80%;">
-	
-	<h2 align="center" style="color: white; padding: 0px;">
-	Changelog
-	</h2>
-	
-	<div class="container">
-		15/02/2025 <br>
-		- Changed some CSS stuff so the website will be good looking even for mobile users <br>
-		- Removed the text that said that the website would'nt be usable for mobile users <br>
-		- Changed the size of most divs <br>
-		- Centered the clock in mobile mode <br>
-		
-		<br>
-        23/01/2025 <br>
-		- Added changelog window <br>
-		- Added clock <br> 
-		- Added welcome message <br>
-		- Changed borders on divs <br>
-		- Changed colour of Copyright text <br>
-		<br>
-    </div>
-	
-	</main>
-	</div>
-	
-	<footer>
-		<div class="left-footer">
-			<p align="center"></p>
-		</div>
-		<div class="center-footer">
-			<p align="center">Gaming :) <img src="img/cat.gif" style="width: 5%; border-width: 0px;"></p>
-		</div>
-		<div class="right-footer">
-			<p align="center"></p>
-		</div>
-		<div class="copyright">
-			<p align="center">Copyright &copy; 2020 - 2025 mansysite.org</p>
-		</div>
-	</footer>
-<script>
-function myFunction() {
-  var popup = document.getElementById("myPopup");
-  popup.classList.toggle("show");
-}
-</script>
+<body>
+
+<div class="centerDiv">
+
+<a href="https://panel.mansysite.org">
+<img src="closedserverDoor.png" class="servermanageDoor" width=400px>
+</a>
+
+<a href="site/index.html">
+<img src="closedDoor.png" class="siteDoor" width=400px>
+</a>
+
+</div>
+
 </body>
-</div class=bg>
-<html>
+
+</html>
