better web selector

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 	<link rel="shortcut icon" type="site/image/png" href="site/images/icon.png">
 </head>
 
-<body>
+<body style="background-image: url(space.gif);">
 
-<div class="centerDiv">
-
-<a href="https://panel.mansysite.org">
-<img src="closedserverDoor.png" class="servermanageDoor" width=400px>
-</a>
+<div id="frame">
 
 <a href="site/index.html">
 <img src="closedDoor.png" class="siteDoor" width=400px>
+</a>
+
+<a href="https://panel.mansysite.org">
+<img src="closedserverDoor.png" class="servermanageDoor" width=400px>
 </a>
 
 </div>
