--- a/site/index.html
+++ b/site/index.html
@@ -40,7 +40,7 @@
 	
     <main class="greeting" style="width:auto; ">
     <h1 align="center">Hello fellow human!</h1>
-    <p style="font-size: 20px;">It seems that you have stumbled upon my website. I'm so happy to see a guest here. It's not everyday you see a web surferer. Well, enjoy this site or farewell if you're leaving!</p>
+    <p style="font-size: 20px;">It seems that you have stumbled upon my website. I'm so happy to see a guest here. It's not everyday you see a web surferer. Well, enjoy your stay or farewell if you're leaving!</p>
 	
 	</main>
 	
