--- a/site/projects.html
+++ b/site/projects.html
@@ -13,6 +13,18 @@
 	<title>Projects | Mansymations</title>
 	<link rel="shortcut icon" type="image/png" href="images/icon.png">
 </head>
+
+<style>
+.topnav a:hover {
+  background-color: #c2ffc2;
+  color: black;
+}
+
+.topnav a.active {
+  color: white;
+}
+</style>
+
 <div class=bg style="width-min: 500px; background-color: #c2ffc2;">
 <body 	style="background-image: url(img/raind.gif);
 				background-attachment: fixed;
