--- a/site/index.html
+++ b/site/index.html
@@ -54,6 +54,11 @@
 	</h2>
 	
 	<div class="container">
+        25/02/2025 <br>
+        - Changed the look of the GAMES page <br>
+        - Removed Trys from the website <br>
+        - Removed the ball game unity test from the site <br><br>
+        
 		15/02/2025 <br>
 		- Changed some CSS stuff so the website will be good looking even for mobile users <br>
 		- Removed the text that said that the website would'nt be usable for mobile users <br>
