--- a/site/games.html
+++ b/site/games.html
@@ -31,66 +31,36 @@
 			</a>
 		</div>
 	</header>
-	<footer></footer>
-	<div class="aside-left">
-		<h5 align="center"><b>Latest</b><h5>
-		<p align="center">Super simple not even fun go do something else with you're free time...</p>
-	</div>
-	<aside>
-		<h4 align="center"><iframe frameborder="0" src="https://itch.io/embed/1438877?border_width=0&amp;bg_color=fff&amp;fg_color=ffffff&amp;link_color=d95609&amp;border_color=fff" width="180" height="165"><a href="https://mansymations.itch.io/slime-adventure-2">Slime Adventure 2 by Mansymations</a></iframe><h4>
-		<h4>Click on here to get the game:<a href="https://mansymations.itch.io/slime-adventure-2">Slime Adventure 2</a></h4>
+	<br>
+
+    <aside style="margin-right: 30px;">
+        <p class="light_purple" style="margin: 5px; position: absolute; padding:0px; float:right; ">NEW!!!</p>
+		<h4 align="center"><iframe frameborder="0" src="https://itch.io/embed/3339316?border_width=0&amp;bg_color=fff&amp;fg_color=2e5f23&amp;link_color=d95609&amp;border_color=b3faa8" width="206" height="165"><a href="https://mansymations.itch.io/the-flipnote-game-project">The Flipnote Studio Game Project by Mansymations</a></iframe><h4>
+		<h4 style="padding: 10px;">Click on here to get the game:<a href="https://mansymations.itch.io/the-flipnote-game-project">The Flipnote Studio Game Project</a></h4>
 	</aside>
-	<main>
+	<main style="margin-left: 30px; width: 55%;">
+		<h1 align="center" class="popup" onclick="myFunction()">The Flipnote Studio Game Project</h1>
+		<p align="center">HEY THIS IS A PROOF OF CONCEPT NOT AN ACTUAL PRODUCT!!
+
+So basically the gimmick of this project is that EVERY single texture in this game is made within Flipnote Studio on my 3DS.
+
+I was inspired to make this by this guy called Kevin on sudomemo.
+
+BTW you can interact with the very smart nerd with SPACE!</p>
+	</main>
+
+    <br>
+    
+	<aside class="aside-left" style="margin-left: 30px;">
+		<h4 align="center"><iframe frameborder="0" src="https://itch.io/embed/1438877?border_width=0&amp;bg_color=fff&amp;fg_color=ffffff&amp;link_color=d95609&amp;border_color=fff" width="180" height="165"><a href="https://mansymations.itch.io/slime-adventure-2">Slime Adventure 2 by Mansymations</a></iframe><h4>
+		<h4 style="padding: 10px;">Click on here to get the game:<a href="https://mansymations.itch.io/slime-adventure-2">Slime Adventure 2</a></h4>
+	</aside>
+	<main style="margin-right: 30px; width: 55%;">
 		<h1 align="center" class="popup" onclick="myFunction()">Slime Adventure 2</h1>
 		<p align="center">Slime Adventure 2 is the the waited sequel to Slime Adventure. I've been working hard on this game for a long time so I really hope you like it. In the game u play as a green slime trying take down the red evil slimes (thats not racist). I made this game because i really like satisfying platformers. The whole meaning of the game is to be fun and an satisfying experince. Hope you like it!</p>
 	</main>
-	<footer>
-		<div class="left-footer">
-			<p align="center"></p>
-		</div>
-		<div class="right-footer">
-			<p align="center"></p>
-		</div>
-	</footer>
 	
-	
-	<div class="aside-left">
-		<h5 align="center"><b>Latest</b><h5>
-		<p align="center">Its playable but not that fun. We'll see if I come back to this projects</p>
-	</div>
-	<aside>
-		<h4 align="center"><iframe frameborder="0" src="https://itch.io/embed/1201686?border_width=0&amp;bg_color=fff&amp;link_color=d95609&amp;border_color=fff" width="180" height="165"><a href="https://mansymations.itch.io/trys">Trys by Mansymations</a></iframe><h4>
-		<h4>Click on here to get the game:<a href="https://mansymations.itch.io/trys">Trys</a></h4>
-	</aside>
-	<main>
-		<h1 align="center">Trys</h1>
-		<p align="center">Its a shoot em up game where you shoot zombies. One day I was bored so I just watched Youtube for a bit then a saw a video about someone who made a shoot em up game. Then I said I can make a game like that. So I started making it. Hope you like it.</p>
-	</main>
-	<footer>
-		<div class="left-footer">
-			<p align="center"></p>
-		</div>
-		<div class="right-footer">
-			<p align="center"></p>
-		</div>
-	</footer>
-	
-	
-	<div class="aside-left">
-		<h5 align="center"><b>Latest</b><h5>
-		<p align="center">I made the game playable in browser but its kinda janky and the grass texture is missing for some reason ¯\_(ツ)_/¯</p>
-	</div>
-	<aside>
-		<h4 align="center"><iframe frameborder="0" src="https://itch.io/embed/2049823?border_width=0&amp;fg_color=d95609&amp;link_color=d95609&amp;border_color=fff" width="180" height="165"><a href="https://mansymations.itch.io/project-unity-test">Project unity test by Mansymations</a></iframe><h4>
-		<h4>Click on here to get the game:<a href="https://mansymations.itch.io/project-unity-test">Unity Project</a></h4>
-	</aside>
-	<main>
-		<h1 align="center">Project Unity 3D platformer</h1>
-		<p align="center">Its a simple test 3d platformer game that I made while playing around in unity. I made this in the beginning of 2023 and I basically haven't done anything since, other than porting the game to html5. Give it a try if ur that bored...</p>
-	</main>
-	
-	
-	</header>
+	<br><br>
 	
 	<footer>
 		<div class="left-footer">
