--- a/site/projects/amd.html
+++ b/site/projects/amd.html
@@ -29,10 +29,26 @@ main {
 <h2 align="center">AMD PC building process</h1>
 <p align="center"><a href="../projects.html" style="padding: 0px;">[Go Back]</a> Published: Jan. 12th 2025 <p class="red" align="center" style="padding: 0px;">(ONGOING)</p></p>
 <p>In this blog I am showing and talking about the process behind building my new pc.</p>
-<p>This is the second PC that I've built from scratch. So im still kinda nervous because this PC is the first brand new computer that I've built.</p>
+<p>This is the second PC that I've built from scratch. So im still kinda nervous because this PC is the first BRAND NEW computer that I've built.</p>
 <p>Im gonna stop yapping and start to write the actual blog or whatever.</p>
 </main>
 
+<br>
+
+<main style=" padding: 20px; border-color: red;">
+
+<p>First I started by unboxing the motherboard which is the Gigabyte Aorus B650 Elite AX V2. Then I put in some nice new 8x2 DDR5 ram.</p>
+
+</main>
+
+<br>
+
+<main style=" padding: 20px; border-color: red;">
+
+<p>Then I unboxed the cpu which is the AMD Ryzen 7600. This was very scary since I've never handled such a expensive CPU in my whole life. But everything went smoothly. Except for the cpu fan that was actually pretty hard to put until I realised that you needed to tighten the screws in a series and not on individual screw after another. I know that was an awful explaination but I can't really explain it that well over text.</p>
+
+</main>
+    
 <br>
 
 <main style=" padding: 20px; border-color: red;">
