--- a/EsperReviews/index.html
+++ b/EsperReviews/index.html
@@ -63,6 +63,19 @@ but me personally, I'm not going to buy it again.
 
 <main style=" padding: 20px; border-color: purple;">
 
+<img src="mango.jpg" style="border-width: 0px; float: right;" width="27%">
+<p>
+<h3>Monster Energy JUICED Mango Loco (Review)</h3>
+The ingredients are: Mango, Guava, Apple, Grape, Pineapple, Apricot, Peach, Orange, Passion fruit. with tropical ingredients like this it would be easy for it to fall right in line with the other millions of exotic drinks out there. but surprisingly. It doesn't taste like any other drink I know of. If i had to pin it down. I'd say that it's mostly thanks to the mango and guava. they stand out the most in the flavour. compared to other Monsters. this almost feels like it's just a regular drink. it's not highly carbonated or sour like other energy drinks. which I guess I should have expected from it being a Juice-based drink. I don't know if the caffine percentage is different in the "JUICED" line, but my heart doesn't beat nearly as rapidly when this is my energy drink of choice. maybe that's just a trick of the flavour, though. Anyhow. this is a good drink. and you can get it at pretty much every store you find regular Monster energy, so I'd say I recommend this.</p>
+
+<h1>7/10</h1>
+
+</main>
+
+<br>
+
+<main style=" padding: 20px; border-color: purple;">
+
 <img src="strawberry.webp" style="border-width: 0px; float: right;" width="30%">
 <p>
 <h3>Monster Energy Ultra Strawberry Dreams (Review)</h3>
