--- a/EsperReviews/index.html
+++ b/EsperReviews/index.html
@@ -47,6 +47,20 @@ These reviews were sourced from our private discord which EsperBlox is in.
 
 <main style="padding: 20px; border-color: purple;">
 
+<img src="aussie.jpg" style="border-width: 0px; float: right;" width="27%">
+<p>
+<h3>Monster Energy Juiced Aussie Style Lemonade (Review)</h3>
+If you're like anything like me, the very first thing you do after buying a new Monster is check the text on the back, there's always a short paragraph describing what inspired the creation of the flavour. But on Aussie Style Lemonade, it's strangely secretive about what this is supposed to be. It describes "Fresh citrus flavour"; but never goes into detail about what citrus fruit specifically. The ingredients list doesn't help either. My best guess is that the flavour is supposed to imitate grape fruit and lime. Both being fruits that I don't personally like. It's tart, but not in a particularly good way. Before I even put my lips to the can, it already tastes like I've bitten into a lime that's 2 months from being ripe. I think I might just be missing a certain taste gene or something, Because I know people who go crazy for this drink, But for me, It's just not there. Or maybe, like with many things in life, it's an acquired taste? It's a reminder that for as how much I can describe what something tastes like, how "good" it is, that will always be subjective. So while for me, this drink will be hard to finish, you might just adore it. "When life gives you lemons, throw them in the ocean"
+</p>
+
+<h1>3/10</h1>
+
+</main>
+
+<br>
+
+<main style="padding: 20px; border-color: purple;">
+
 <img src="watermelon.webp" style="border-width: 0px; float: right;" width="30%">
 <p>
 <h3>Monster Energy ZERO SUGAR Ultra Watermelon (Review)</h3>
