--- a/EsperReviews/index.html
+++ b/EsperReviews/index.html
@@ -75,6 +75,20 @@ but me personally, I'm not going to buy it again.
 
 <br>
 
+<main style="padding: 20px; border-color: purple;">
+
+<img src="paradise.png" style="border-width: 0px; float: right;" width="30%">
+<p>
+<h3>Monster Energy Ultra Paradise (Review)</h3>
+It tastes good, not extremely good, but still good.
+</p>
+
+<h1>6/10</h1>
+
+</main>
+
+<br>
+
 <main style=" padding: 20px; border-color: purple;">
 
 <img src="mango.jpg" style="border-width: 0px; float: right;" width="27%">
