--- a/index.html
+++ b/index.html
@@ -19,12 +19,18 @@
 <div id="frame">
 
 <a href="site/index.html">
-<img src="closedDoor.png" class="siteDoor" width=400px>
+<img src="doors/closedDoor.png" class="siteDoor" width=400px>
+</a>
+
+<a href="esperReviews/index.html">
+<img src="doors/closedesperDoor.png" class="esperDoor" width=400px>
 </a>
 
 <a href="https://panel.mansysite.org">
-<img src="closedserverDoor.png" class="servermanageDoor" width=400px>
+<img src="doors/closedserverDoor.png" class="servermanageDoor" width=400px>
 </a>
+
+
 
 </div>
 
