--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body style="background-image: url(space.gif);">
 
-<div id="frame">
+<div id="frame" style="max-width: 850px;">
 
 <a href="site/index.html">
 <img src="doors/closedDoor.png" class="siteDoor" width=400px>
@@ -30,7 +30,9 @@
 <img src="doors/closedserverDoor.png" class="servermanageDoor" width=400px>
 </a>
 
-
+<a href="DraklekplatsWiki/index.html">
+<img src="doors/closeddrakdoor.png" class="drakDoor" width=400px>
+</a>
 
 </div>
 
