update blaz review

--- a/EsperReviews/index.html
+++ b/EsperReviews/index.html
@@ -12,6 +12,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 	<title>Monster Reviews</title>
 	<link rel="shortcut icon" type="image/png" href="../site/images/icon.png">
+    <script src="script.js"></script>
 </head>
 
 <style>
@@ -24,9 +25,16 @@ main {
 <div class=bg style="background-color: black;">
 <body style="background-image: url(bg.jpg); background-size: 200px; background-position: 200px;">
 <br>
+
+<aside id="sidePanel" style="border-color: purple; position: fixed; left: 10px; width: 200px; min-height: 100px; padding: 5px;">
+    <button style="float: right;" onclick="hidepanel()">X</button>
+    <h3 align="center">Are you done reading?</h2>
+    <p>Check out our friend Blaz's<a href="blaz.html">monster reviews</a>too! </p>
+</aside>
+    
 <main style="border-color: purple; padding: 20px;">
 <h2 align="center">Espster reviews (<a class="purple" href="https://www.youtube.com/channel/UCyY-HgPNSKS6dYFL18zAd9A">EsperBlox's</a> monster energy drink reviews)</h1>
-<p align="center"><a href="../index.html" style="padding: 0px;">[Take a look into MansyS belongings]</a> Updated: March. 5th 2025 <p class="red" align="center" style="padding: 0px;">(ONGOING)</p></p>
+<p align="center"><a href="../index.html" style="padding: 0px;">[Take a look into MansyS belongings]</a> Updated: March. 9th 2025 <p class="red" align="center" style="padding: 0px;">(ONGOING)</p></p>
 
 <div style="float: right;">
 <img src="esper.png" style="float: right; border-width: 0px;">
