--- a/DraklekplatsWiki/index.html
+++ b/DraklekplatsWiki/index.html
@@ -27,7 +27,7 @@
 	left: -1px;">
     <img height="50px" style="left: 10px; position: fixed;" src="imgs/drak.webp">
     <h1 style="left: 90px; top: 0px; padding: 5px; position: fixed; float: right;">Draklekplatsens Wikipage</h1>
-	<button style="font-family: sans-serif; float: right; font-size: 24px; position: fixed; top: 25px; right: 10px;" onclick="hidepanel()">Göm/Visa meny</button>
+	<button style="font-family: sans-serif; float: right; font-size: 24px; position: fixed; top: 25px; right: 10px;" onclick="hidepanel()">Meny</button>
 </div>
 </header>
 <body>
@@ -44,10 +44,15 @@ hoppa dit du ska va meny<br>
 
 </aside>  
     
-<main>
+<main style="min-height: 450px;">
 <section id="generell">
+
+<main style="float: right; min-height: 10%; max-width: 40%;"><img style="width:100%;" src="imgs/drak.webp"></main>
+    
 <h1>Generell info</h1>
-<p>Det här är info</p>
+<p>
+    Draklekplatsen är en lekplats i Lyckeby, 371 63 Karlskrona. Det är där barnen från hela karlskrona samlas för att göra deras heliga "lek" cermoni. Lekplatsen inkluderar en häst, gungor(med gamer stol), stor gunga, litet slott, potta, snurri burri och den heliga draken.
+</p>
 </section>
 </main>
 
