--- a/EsperReviews/blaz.html
+++ b/EsperReviews/blaz.html
@@ -34,7 +34,7 @@ main {
     
 <main style="border-color: #d45211; padding: 20px;">
 <h2 align="center">Blaz's monster reviews (because he couldn't stop begging for his own)</h1>
-<p align="center"><a href="../index.html" style="padding: 0px;">[Take a look into MansyS belongings]</a> Updated: March. 12th 2025 <p class="red" align="center" style="padding: 0px;">(ONGOING)</p></p>
+<p align="center"><a href="../index.html" style="padding: 0px;">[Take a look into MansyS belongings]</a> Updated: March. 13th 2025 <p class="red" align="center" style="padding: 0px;">(ONGOING)</p></p>
 
 <div style="float: right;">
 <img src=".png" style="float: right; border-width: 0px;">
@@ -61,6 +61,19 @@ Erm yeah
 Like our friend Esperblox I also read the can description when buying a new monster. This one doesn’t really describe what it tastes like, to describe this flavour. It tastes like every other normal energy drink but more fancy. It really has that cheap energy drink taste but made it fancy. I really like that but there’s another taste in the background that kinda ruins it. It also gives me a tummy ache which is a no no. And yes there’s a difference between zero sugar and sugar monsters. To give it a rating. </p>
     
 <h1>4/10</h1>
+
+</main>
+
+<br>
+
+<main style="padding: 20px; border-color: #d45211;">
+
+<img src="zerosuger.png" style="border-width: 0px; float: right;" width="27%">
+<p>
+<h3>Monster Energy Ultra Ultra Strawberry Dreams (review)</h3>
+God I love this flavour. It’s sweet, tart and tastes like strawberry’s. It’s definitely one of the best ultra flavours. It’s extremely sweet and tart and those two things bind together perfectly. The only issue I have with it is that it could’ve had more taste and strawberries. Anyhow this flavour is so good. Definitely of my favourites.
+
+<h1>8.5/10</h1>
 
 </main>
 
