--- a/EsperReviews/blaz.html
+++ b/EsperReviews/blaz.html
@@ -68,7 +68,7 @@ Like our friend Esperblox I also read the can description when buying a new mons
 
 <main style="padding: 20px; border-color: #d45211;">
 
-<img src="zerosuger.png" style="border-width: 0px; float: right;" width="27%">
+<img src="dreams.webp" style="border-width: 0px; float: right;" width="27%">
 <p>
 <h3>Monster Energy Ultra Ultra Strawberry Dreams (review)</h3>
 God I love this flavour. It’s sweet, tart and tastes like strawberry’s. It’s definitely one of the best ultra flavours. It’s extremely sweet and tart and those two things bind together perfectly. The only issue I have with it is that it could’ve had more taste and strawberries. Anyhow this flavour is so good. Definitely of my favourites.
