--- a/EsperReviews/index.html
+++ b/EsperReviews/index.html
@@ -26,7 +26,7 @@ main {
 <body style="background-image: url(bg.jpg); background-size: 200px; background-position: 200px;">
 <br>
 
-<aside id="sidePanel" style="border-color: purple; position: fixed; left: 10px; width: 200px; min-height: 100px; padding: 5px;">
+<aside id="sidePanel" style="border-color: purple; background-color: #fff; position: fixed; left: 10px; width: 200px; min-height: 100px; padding: 5px;">
     <button style="float: right;" onclick="hidepanel()">X</button>
     <h3 align="center">Are you done reading?</h2>
     <p>Check out our friend Blaz's<a href="blaz.html">monster reviews</a>too! </p>
