--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 
 <body style="background-image: url(space.gif);">
 
+<div id="frame">
+	<h1 style="purple"><u>Welcome to my realm!</u></h1>
+</div>
+
 <div id="frame" style="max-width: 850px;">
 
 <a href="site/index.html">
