--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 <body style="background-image: url(space.gif);">
 
 <div id="frame">
-	<h1 style="purple"><u>Welcome to my realm!</u></h1>
+	<h1 style="color: purple; font-family: Minecraftia;"><u>Welcome to my realm!</u></h1>
 </div>
 
+<br>
+	
 <div id="frame" style="max-width: 850px;">
 
 <a href="site/index.html">
