--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body style="background-image: url(space.gif);">
 
 <div id="frame">
-	<h1 style=""><u>Welcome to my realm!</u></h1>
+	<h1 style="">Welcome to my realm!</h1>
 </div>
 
 <br>
