--- a/EsperReviews/blaz.html
+++ b/EsperReviews/blaz.html
@@ -29,7 +29,7 @@ main {
 <aside id="sidePanel" style="border-color: #d45211; background-color: #fff; position: fixed; left: 10px; width: 200px; min-height: 200px;padding: 5px;">
     <button style="float: right;" onclick="hidepanel()">X</button>
     <h3 align="center">Are you done reading?</h2>
-    <p>Check out our friend Esperblox's <a href="index.html">monster reviews</a>too! </p>
+    <p>Check out our other reviewers<a href="reviewers.html">reviews</a><br>too! </p>
 </aside>
     
 <main style="border-color: #d45211; padding: 20px;">
@@ -37,7 +37,7 @@ main {
 <p align="center"><a href="../index.html" style="padding: 0px;">[Take a look into MansyS belongings]</a> Updated: March. 13th 2025 <p class="red" align="center" style="padding: 0px;">(ONGOING)</p></p>
 
 <div style="float: right;">
-<img src=".png" style="float: right; border-width: 0px;">
+<img width="90px" src="blaze.webp" style="margin-right: 40px; float: right; border-width: 0px;">
 <p align="center" style="color:#d45211;">Blazisity (Blaz)</p>
 </div>
     
