--- a/EsperReviews/index.html
+++ b/EsperReviews/index.html
@@ -29,7 +29,7 @@ main {
 <aside id="sidePanel" style="border-color: purple; background-color: #fff; position: fixed; left: 10px; width: 200px; min-height: 100px; padding: 5px;">
     <button style="float: right;" onclick="hidepanel()">X</button>
     <h3 align="center">Are you done reading?</h2>
-    <p>Check out our friend Blaz's<a href="blaz.html">monster reviews</a>too! </p>
+    <p>Check out our other reviewers<a href="reviewers.html">reviews</a><br>too! </p>
 </aside>
     
 <main style="border-color: purple; padding: 20px;">
