--- a/EsperReviews/index.html
+++ b/EsperReviews/index.html
@@ -85,6 +85,24 @@ but me personally, I'm not going to buy it again.
 
 <main style="padding: 20px; border-color: purple;">
 
+<img src="rosa.png" style="border-width: 0px; float: right;" width="30%">
+<p>
+<h3>Monster Energy Ultra Rosá (Review)</h3>
+This is one of those Monsters that sits in the indescribable middle of the monster energy flavour circle. It doesn't taste like any fruit in particular. At least not any that I can personally pinpoint. The name makes me think it's supposed to taste like roses. But I've never been the type of guy to go around tasting random flowers. So if you wanna know if this drink really has a "floral Finnish" ,as they say. Go ask a botanist. The drink kind of tastes like Ultra Strawberry Dreams, but less flavourful, somehow. it's sour, but not in the way regular Monster Energy is, So if you're not a fan of the usual chemical energy drink taste, you might still like this. 
+I would also like to add that around 2 hour after drinking this, Much to my surprise, I began to harbour minuscule red rose thorns on the back of my hands. I have no idea what could have caused this, but later that same day when I was washing my hands I felt a striking pain. The crimson thorns had broke of the back, and was now impaling the rest of my hand, probably from me rubbing my hands to clean them. They're like a thousand tiny needles with a stinging pain every time I moved my fingers. In an effort to get the thorns out of my hand I tried to wash away them with more water. But, woe is me. The thorns only grew larger from this digging deeper into my skin. at this point I was profusely sweating. I went to wipe away the sweat from my brow, but this only made the needles move to my face as well. Not only that. but after waking up the next day I noticed that my finger nails had turned into rose petals. and my hair, or what used to be my hair. It was now not but a tangled mess of rose vines. Safe to say, I've had a pretty unusual day. 
+If anyone else has experienced something like this please let me know. My doctor doesn't believe my anecdote, and says it's most likely just the common cold.
+Anyhow, there's no reason to think these rose themed symptoms have anything to do with or are in anyway related to be having drunk Monster Energy Ultra Rosá. So I'll give this drink a 
+
+</p>
+
+<h1>6/10, good stuff.</h1>
+
+</main>
+
+<br>
+
+<main style="padding: 20px; border-color: purple;">
+
 <img src="paradise.png" style="border-width: 0px; float: right;" width="30%">
 <p>
 <h3>Monster Energy Ultra Paradise (Review)</h3>
