--- a/EsperReviews/index.html
+++ b/EsperReviews/index.html
@@ -160,6 +160,22 @@ very yummy</p>
 
 </main>
 
+<br>
+
+<main style=" padding: 20px; border-color: purple;">
+
+<img src="gold.png" style="border-width: 0px; float: right;" width="27%">
+<p>
+<h3>Monster Energy Ultra Gold (Review)</h3>
+This is unequivocally the best Ultra Monster I have ever tasted, probably the best Ultra out there if I were hazard to guess. It's so good that it even Rivals non Ultra flavour like Pacific Punch and other Juiced Monsters. Or...?
+Full disclosure, my opinion of Ultra gold may or may not be heavily swayed by my strong bias towards anything Pineapple. To be totally honest, I'm not even sure what I'm going to rate this. I love this flavour, but is that just because I was predisposed to liking it from the moment I realised It was Pineapple flavour, and is in reality only on par with Ultra Strawberry Dreams? Or is it really as good as my heart is telling me. I'm not sure that I can be a fair judge. For the past 21 day of my life making a career out of reviewing Monster Flavours just like this. To inform and entertain the Citizens of this country with accurately objective reviews on Monster Energy Drinks. Today I've met a cross in the road, Will I deceive my thousands of loyal readers by serving possibly biased reviews? No! I will do what's right. Instead of reviewing this myself. I call upon you; My rival reviewers to take upon you the burden of reviewing Monster Energy Ultra Gold! I am not proud to be leaving such an anticipated Monster Review in the hands of Inferior journalist. But to retain my integrity as the worlds best Mansysite.org Monster Energy Reviewist, That is the path I must go down. Not just for myself. but for the world at large. So please, just this once, why not turn the table? YOU Tell ME if this Monster It's really Bussin. or if it's just Mid. If that is even a favour I am allowed to ask. To all my loyal readers, I am sorry. I have let you down.... Damn this tastes good though.
+
+</p>
+
+<h1>9/10</h1>
+
+</main>
+
 <footer style="background-color: black;">
 		<br><br>
 		<div class="copyright" style="background-color: purple;">
