--- a/EsperReviews/blaz.html
+++ b/EsperReviews/blaz.html
@@ -26,7 +26,7 @@ main {
 <body style="background-image: url(monster.gif); background-size: 200px; background-position: 200px;">
 <br>
 
-<aside id="sidePanel" style="border-color: #d45211; background-color: #fff; position: fixed; left: 10px; width: 200px; min-height: 200px;padding: 5px;">
+<aside id="sidePanel" style="border-color: #d45211; background-color: #fff; bottom: 20px; position: fixed; left: 10px; width: 200px; min-height: 200px;padding: 5px;">
     <button style="float: right;" onclick="hidepanel()">X</button>
     <h3 align="center">Are you done reading?</h2>
     <p>Check out our other reviewers<a href="reviewers.html">reviews</a><br>too! </p>
